user can now see profile with user data, added and edited views and routes

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,9 @@
 doctype html
 html
   head
-    title Shadows Wake
-  body
+    title Shadow's Wake
+  //include stylesheet
+  body.background
   block content
     div.container.landing
       button#showLogin login
