--- a/views/ChapterOneBattle.pug
+++ b/views/ChapterOneBattle.pug
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title Skirmish
+    include stylesheet
+    body.background
     ul.character
       li The Dunedain
       li= `Vigor:${characterData.vigor}`
