--- a/views/index.pug
+++ b/views/index.pug
@@ -2,8 +2,9 @@ doctype html
 html
   head
     title Shadow's Wake
-  //include stylesheet
+  include stylesheet
   body.background
+  h1.superTitle Shadows Wake
   block content
     div.container.landing
       button#showLogin login
