--- a/views/stylesheet.pug
+++ b/views/stylesheet.pug
@@ -1,1 +1,2 @@
 link(rel='stylesheet' type="text/css" href='/main.css')
+link(href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet")
