--- a/views/ChapterTwo.pug
+++ b/views/ChapterTwo.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title Chapter One
+    title Chapter Two
     include stylesheet
     body.background
     ul.character
@@ -24,4 +24,4 @@ html
     div
       ul
         li
-          a(href="/chapterOneA") Continue..
+          a(href="/chapterTwoA") Continue..
