--- a/views/ChapterTwoA.pug
+++ b/views/ChapterTwoA.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title Chapter One Continued
+    title Chapter Two Continued
     include stylesheet
     body.background
     ul.character
@@ -21,4 +21,4 @@ html
   div.buttons
     ul
       li
-        a(href="/chapterOneBattle") Engage!
+        a(href="/chapterTwoBattle") Engage!
