--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,8 @@ html
     title Shadow's Wake
   include stylesheet
   body.background
-  h1.superTitle Shadows Wake
+  h1.superTitle Shadow's Wake
+  h3.lessSuperTitle A Dark Souls Text Adventure
   block content
     div.container.landing
       button#showLogin login
