--- a/css/main.css
+++ b/css/main.css
@@ -17,11 +17,18 @@
     -o-background-size: cover;
     -webkit-background-size: cover;
 }
+.backgroundVictory {
+    background:
+            url("http://i0.kym-cdn.com/photos/images/newsfeed/001/315/787/15c.gif") no-repeat center center fixed;
+    background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    -webkit-background-size: cover;
+}
 
 /* login styling*/
 .container.landing {
     text-align: center;
-    padding-right: 17%;
     padding-top: 10%;
     font-family: 'Press Start 2P', cursive;
 }
@@ -31,16 +38,21 @@
     padding-top: 10%;
     font-family: 'Press Start 2P', cursive;
 }
-
+/*title styling*/
 .superTitle {
     text-align: center;
     font-size: 60px;
     color: goldenrod;
-    padding-right: 15%;
     padding-top: 10%;
     font-family: 'Press Start 2P', cursive;
+    text-shadow: #FC0 1px 0 10px;
 }
-
+.lessSuperTitle {
+    text-align: center;
+    font-size: 30px;
+    color: goldenrod;
+    font-family: 'Press Start 2P', cursive;
+}
 
 /*text styling*/
 .gameText {
@@ -50,10 +62,26 @@
     background-color: hsla(50, 33%, 25%, .75);
     text-align: center;
 }
+
 .formText {
     font-family: 'Press Start 2P', cursive;
     font-size: 10px;
     text-align: center;
+}
+
+.profile {
+    font-family: 'Press Start 2P', cursive;
+    font-size: 10px;
+    text-align: center;
+    background-color: hsla(50, 33%, 25%, .75);
+    width: 400px;
+    display: flex;
+}
+
+.buttons {
+    background-color: hsla(50, 33%, 25%, .75);
+    width: 100px;
+    height: 20px;
 }
 
 /*character styling*/
@@ -64,7 +92,7 @@
         url("https://orig00.deviantart.net/84ac/f/2016/077/6/2/dark_souls_3___red_knight_by_zedotagger-d9vknnd.gif") no-repeat;
     font-family: 'Press Start 2P', cursive;
     font-size: 10px;
-    background-color: burlywood;
+    background-color: hsla(50, 33%, 25%, .75);
 }
 .enemy {
     height: 250px;
@@ -74,6 +102,6 @@
     background-size: 150px;
     font-family: 'Press Start 2P', cursive;
     font-size: 10px;
-    background-color: burlywood;
+    background-color: hsla(50, 33%, 25%, .75);
     text-align: end;
 }
