--- a/views/ChapterThree.pug
+++ b/views/ChapterThree.pug
@@ -3,7 +3,7 @@ html
   head
     title Chapter Three
     include stylesheet
-    body.background
+    body.backgroundThree
     ul.character
       li The Ashen One
       li= `WR:${characterData.vigor}`
