--- a/views/ChapterTwoA.pug
+++ b/views/ChapterTwoA.pug
@@ -3,7 +3,7 @@ html
   head
     title Chapter Two Continued
     include stylesheet
-    body.background
+    body.backgroundTwo
     ul.character
       li The Ashen One
       li= `WR:${characterData.vigor}`
