--- a/views/characterDeath.pug
+++ b/views/characterDeath.pug
@@ -6,6 +6,6 @@ html
   body.backgroundLoss
 
     h1.superTitle You Died
-
-    form.firstEnemyGenerator(name="generateEnemies" method="POST" action="/incrementLoss")
-      button.edit-submit(type="submit") Continue
+  ul
+    li
+      a(href="/profile") Exit the game, you fucking loser...
