working on adding messages to view during combat

--- a/views/ChapterOne.pug
+++ b/views/ChapterOne.pug
@@ -4,24 +4,26 @@ html
     title Chapter One
     include stylesheet
     body.background
-    ul.character
-      li The Ashen One
-      li= `WR:${characterData.vigor}`
-      li= `FS:${characterData.fight}`
-      li= `AV:${characterData.armor}`
-    p.gameText
-      | You wake in a fugue of pain and disorientation. The last thing you remember was being charged by an warg rider.
-      |You attempt to get up, but a sharp pain in your shoulder prevents your from doing so. You clench your mouth in fear
-      |of making too much noise. The orcs most likley think you perished in the ambush, and you don’t want to give them
-      |any reason to believe otherwise. You again attempt to stand, this time not using your injured arm to prop yourself up.
-      |After a few moments of standing the fugue passes and your sight clears. You wish it hadn’t. Many dead lay before you,
-      |both dunedain and orc. Though the corpses of the orcs vastly outnumber that of the dunedain, you count five clothed in
-      |the garments of your brothers. At first the desire for retribution takes hold and you reach for your sword, though
-      |your hand grasps at thin air. Immediately, hopelessness sets in and you fall to your knees. As you begin to calm down,
-      |you realize what it is you must do. You must return to Annuminas with the knowledge of what took place here. Your
-      |people must know that the three eldest sons of Isildur have perished. You grab a sword, bow, and arrows off the
-      |body of one of your fallen brethren and quetly sneak away from the clearing.
-    div
-      ul
-        li
-          a(href="/chapterOneA") Continue..
+    div.gridLayoutOne
+      ul.character
+        li The Ashen One
+        li= `WR:${characterData.vigor}`
+        li= `FS:${characterData.fight}`
+        li= `AV:${characterData.armor}`
+      p.gameText
+        | You awaken in a cold and confined space. The dim grey of morning filters in through an opening right above you.
+        |You reach out and pull yourself through the opening. Still disoriented, you lose your balance and fall onto the hard ground.
+        |After a few moments, you stand to your feet and look around. You are in a cemetery, ruined and covered in ash.
+        |It is completely silent save for a light tapping up ahead. Slowly you make your way through the rubble of broken gravestones
+        |towards the source of the persistent tapping, which you now realize is coming from behind a ruined wall.
+        |You quietly peek around the corner and see a man, knelt down and hitting a stone against a black basin. Not feeling threatened,
+        |you begin to approach him. Before you can speak, the man abruptly turns toward you and gets to his feet. What you see
+        |makes you step back in revulsion for what is before you now is not a man, but some horrible wretch. The creature pulls
+        |a blade out from the tattered cloak that is barely covering its shrivelled body and begins to walk toward you.
+        |You look around frantically until you see a fallen knight with a sword and shield resting upon its corpse. Quickly
+        |the armaments and ready yourself. The creature raises its weapon and clumsily attempts to swing it at you. Just before the
+        |blade can hit its mark you instinctively swing your shield, knocking the blade from the hand of the creature and causing
+        |to stagger. Realizing this is your chance, you take the sword and run the creature through. It falls to the ground lifeless.
+        |Worried you will encounter more of these wretches, you strip the knight of his armor and put it on.
+    div.hrefText
+      a(href="/chapterOneA") Continue..
