--- a/views/partials/user-form.pug
+++ b/views/partials/user-form.pug
@@ -1,14 +1,25 @@
 form#signin(name="signin" method="post" action="/register")
   label(for="first_name") First name
   input.text(id="first_name" name="first_name" type="text")
+  br
+  br
   label(for="last_name") Last name
   input.text(name="last_name" type="text")
+  br
+  br
   label(for="username") Username
   input.text(name="username" type="text")
+  br
+  br
   label(for="email") Email Address
   input.text(name="email" type="text")
+  br
+  br
   label(for="password") Password
   input(name="password" type="password")
+  br
+  br
   label(for="confirmation") Confirmation
   input(name="confirmation" type="password")
-  input.btn(type="submit" value="Sign In")
+  br
+  input.btn(type="submit" value="Sign Up")
