--- a/views/register.pug
+++ b/views/register.pug
@@ -4,4 +4,5 @@ block content
 
   if message
     h2= message
-  include partials/user-form.pug
+  div.centerBlock
+    include partials/user-form.pug
