--- a/css/main.css
+++ b/css/main.css
@@ -58,12 +58,6 @@
     padding-top: 10%;
     font-family: 'Press Start 2P', cursive;
 }
-.loginPage {
-    text-align: center;
-    padding-right: 17%;
-    padding-top: 10%;
-    font-family: 'Press Start 2P', cursive;
-}
 /*title styling*/
 .superTitle {
     text-align: center;
@@ -83,25 +77,62 @@
 /*text styling*/
 .gameText {
     font-family: 'Press Start 2P', cursive;
-    color: white;
-    font-size: 10px;
-    background-color: hsla(50, 33%, 25%, .75);
+    color: gold;
+    text-shadow: #FC0 1px 0 10px;
+    font-size: 12px;
     text-align: center;
+    width: 600px;
+    height: auto;
+    margin: 0 auto;
+}
+.hrefText {
+    font-family: 'Press Start 2P', cursive;
+    color: gold;
+    text-shadow: #FC0 1px 0 10px;
+    font-size: 20px;
+    text-align: center;
+    width: 200px;
+    height: auto;
+    margin: 0 auto;
+    background-color: hsla(50, 33%, 25%, .75);
+    list-style-type: none;
 }
 
-.formText {
+.selectDifficulty {
     font-family: 'Press Start 2P', cursive;
     font-size: 10px;
     text-align: center;
+    background-color: hsla(50, 33%, 25%, .75);
+    margin: 0 auto;
+    width: 300px;
 }
+
+#signin {
+    font-family: 'Press Start 2P', cursive;
+    font-size: 15px;
+    text-align: center;
+    background-color: hsla(50, 33%, 25%, .75);
+    width: 225px;
+    margin: 0 auto;
+}
+.loginPage {
+    font-family: 'Press Start 2P', cursive;
+    font-size: 15px;
+    text-align: center;
+    /*background-color: hsla(50, 33%, 25%, .75);*/
+    width: 225px;
+    margin: 0 auto;
+}
+
 
 .profile {
     font-family: 'Press Start 2P', cursive;
-    font-size: 10px;
+    font-size: 12px;
     text-align: center;
     background-color: hsla(50, 33%, 25%, .75);
-    width: 400px;
-    display: flex;
+    width: 300px;
+    margin: 0 auto;
+    list-style-type: none;
 }
 
 .buttons {
@@ -109,6 +140,7 @@
     width: 100px;
     height: 20px;
 }
+
 
 /*character styling*/
 .character {
@@ -120,6 +152,18 @@
     font-size: 10px;
     background-color: hsla(50, 33%, 25%, .75);
 }
+
+.characterBattle {
+    height: 400px;
+    width: 300px;
+    background:
+            url("https://orig00.deviantart.net/84ac/f/2016/077/6/2/dark_souls_3___red_knight_by_zedotagger-d9vknnd.gif") no-repeat;
+    background-size: 400px;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 15px;
+    background-color: hsla(50, 33%, 25%, .75);
+}
+
 .enemy {
     height: 250px;
     width: 200px;
@@ -153,4 +197,17 @@
     font-size: 10px;
     background-color: hsla(50, 33%, 25%, .75);
     text-align: end;
+}
+
+/*GRID LAYOUTS*/
+.gridLayoutOne {
+    display: grid;
+    grid-template-columns: 300px 300px;
+    grid-template-rows: 300px 300px;
+}
+
+.gridLayoutTwo {
+    display: grid;
+    grid-template-columns: 600px 200px 900px;
+    grid-template-rows: 500px 200px 900px;
 }
