--- a/views/ChapterOneBattle.pug
+++ b/views/ChapterOneBattle.pug
@@ -11,13 +11,14 @@ html
         li= `FS:${characterData.fight}`
         li= `AV:${characterData.armor}`
 
-      form.buttons(name="battleResults" method="GET" action="/battle")
+      form.battleButton(name="battleResults" method="GET" action="/battle")
         button.edit-submit(type="submit") Fight it out!
 
       ul.enemy
-        li= enemyData.name
+        li Garden of Serpents
         li= `WR:${enemyData.vigor}`
         li= `FS:${enemyData.fight}`
         li= `AV:${enemyData.armor}`
-
-  h1= message
+    div.battleText
+      if message
+        p= message
