--- a/views/ChapterThreeBattle.pug
+++ b/views/ChapterThreeBattle.pug
@@ -4,17 +4,21 @@ html
     title Skirmish
     include stylesheet
     body.backgroundThree
-    ul.character
-      li The Ashen One
-      li= `WR:${characterData.vigor}`
-      li= `FS:${characterData.fight}`
-      li= `AV:${characterData.armor}`
+    div.gridLayoutTwo
+      ul.characterBattle
+        li The Ashen One
+        li= `WR:${characterData.vigor}`
+        li= `FS:${characterData.fight}`
+        li= `AV:${characterData.armor}`
 
-    form.selectDifficulty(name="battleResults" method="GET" action="/battleThree")
-      button.edit-submit(type="submit") Fight it out!
+      form.battleButton(name="battleResults" method="GET" action="/battleThree")
+        button.edit-submit(type="submit") Fight it out!
 
-    ul.enemyThree
-      li= enemyData.name
-      li= `WR:${enemyData.vigor}`
-      li= `FS:${enemyData.fight}`
-      li= `AV:${enemyData.armor}`
+      ul.enemyThree
+        li Gravelord's Shade
+        li= `WR:${enemyData.vigor}`
+        li= `FS:${enemyData.fight}`
+        li= `AV:${enemyData.armor}`
+    div.battleText
+      if message
+        p= message
