--- a/views/characterDeath.pug
+++ b/views/characterDeath.pug
@@ -1,11 +1,9 @@
 doctype html
 html
   head
-    title victory
+    title death..
     include stylesheet
   body.backgroundLoss
-
     h1.superTitle You Died
-  ul
-    li
-      a(href="/profile") Exit the game, you fucking loser...
+  div.hrefText
+    a(href="/profile") Your humanity diminishes...
