--- a/views/battleVictory.pug
+++ b/views/battleVictory.pug
@@ -12,7 +12,7 @@ html
 
     h1.superTitle Victory Achieved
 
-    form.firstEnemyGenerator(name="generateEnemies" method="POST" action="/generateSecondEnemy")
+    form.hrefText(name="generateEnemies" method="POST" action="/generateSecondEnemy")
       input(type="hidden" name="vigor"  value="7" readonly)
       input(type="hidden" name="fight" value="3" readonly)
       input(type="hidden" name="armor" value="3" readonly)
