--- a/views/battleVictoryThree.pug
+++ b/views/battleVictoryThree.pug
@@ -12,5 +12,5 @@ html
 
     h1.superTitle Victory Achieved
 
-    form.firstEnemyGenerator(name="generateEnemies" method="POST" action="/incrementWins")
+    form.hrefText(name="generateEnemies" method="POST" action="/incrementWins")
       button.edit-submit(type="submit") Continue
