--- a/views/battleVictoryTwo.pug
+++ b/views/battleVictoryTwo.pug
@@ -12,7 +12,7 @@ html
 
     h1.superTitle Victory Achieved
 
-    form.firstEnemyGenerator(name="generateEnemies" method="POST" action="/generateThirdEnemy")
+    form.hrefText(name="generateEnemies" method="POST" action="/generateThirdEnemy")
       input(type="hidden" name="vigor"  value="5" readonly)
       input(type="hidden" name="fight" value="5" readonly)
       input(type="hidden" name="armor" value="5" readonly)
