--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,7 @@
 /*text styling*/
 .gameText {
     font-family: 'Press Start 2P', cursive;
-    color: gold;
+    color: lightgoldenrodyellow;
     text-shadow: #FC0 1px 0 10px;
     font-size: 12px;
     text-align: center;
