--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ html
     title Shadow's Wake
   include stylesheet
   body.background
-  h1.superTitle Shadow's Wake
+  h1.superTitle Ashen One
   h3.lessSuperTitle A Dark Souls Text Adventure
   block content
     div.container.landing
